--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        clipToPadding="false">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -600,137 +601,207 @@
                     </FrameLayout>
                 </LinearLayout>
             </HorizontalScrollView>
-        </LinearLayout>
-    </ScrollView>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:paddingHorizontal="30dp">
-
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:clipChildren="false">
-
-            <ImageView
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="-20dp"
-                android:layout_marginTop="-15dp"
-                android:layout_marginEnd="-20dp"
-                android:layout_marginBottom="-40dp"
-                android:adjustViewBounds="true"
-                android:background="@android:color/transparent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/continue_test" />
-        </FrameLayout>
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="15dp"
+                android:text="Top Courses"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
+            <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:padding="20dp">
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="60dp"
-                    android:layout_gravity="center"
-                    android:layout_marginEnd="25dp"
-                    android:layout_weight="2"
-                    android:src="@drawable/react_logo" />
+                android:paddingStart="-12dp"
+                android:scrollbars="none">
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:orientation="vertical">
+                    android:orientation="horizontal"
+                    android:paddingBottom="8dp">
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="React JS"
-                            android:textColor="#000000"
-                            android:textSize="22sp"
-                            android:textStyle="bold" />
+                    <FrameLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="17dp"
+                        android:elevation="2dp">
 
                         <ImageView
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:layout_alignParentEnd="true"
-                            android:src="@drawable/ic_trash" />
-                    </RelativeLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="4dp"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-
-                        <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="8/10"
-                            android:textColor="#8B5CF6"
-                            android:textSize="13sp" />
+                            android:layout_marginStart="-30dp"
+                            android:layout_marginTop="-55dp"
+                            android:layout_marginEnd="-200dp"
+                            android:layout_marginBottom="-500dp"
+                            android:adjustViewBounds="true"
+                            android:background="@drawable/frame"
+                            android:scaleType="centerCrop" />
 
-                        <TextView
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp"
+                                android:layout_weight="2"
+                                android:background="#ffffff"
+                                android:gravity="center">
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="90dp"
+                                    android:adjustViewBounds="true"
+                                    android:maxWidth="140dp"
+                                    android:maxHeight="80dp"
+                                    android:scaleType="fitCenter"
+                                    android:src="@drawable/java_logo" />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp"
+                                android:layout_weight="1"
+                                android:background="#fcfcfc"
+                                android:gravity="bottom"
+                                android:orientation="horizontal"
+                                android:padding="6dp">
+
+                                <LinearLayout
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:orientation="vertical">
+
+                                    <TextView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:ellipsize="end"
+                                        android:maxLines="1"
+                                        android:text="Core Java"
+                                        android:textColor="#000000"
+                                        android:textSize="14sp"
+                                        android:textStyle="bold" />
+
+                                    <TextView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginTop="2dp"
+                                        android:ellipsize="end"
+                                        android:maxLines="1"
+                                        android:text="1h. 15min"
+                                        android:textColor="#888888"
+                                        android:textSize="12sp" />
+                                </LinearLayout>
+
+                                <ImageView
+                                    android:layout_width="24dp"
+                                    android:layout_height="24dp"
+                                    android:layout_marginTop="4dp"
+                                    android:src="@drawable/bookmark" />
+                            </LinearLayout>
+                        </LinearLayout>
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="12dp"
+                        android:clipChildren="false"
+                        android:clipToPadding="false"
+                        android:elevation="2dp">
+
+                        <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text=" question"
-                            android:textColor="#b0b0b2"
-                            android:textSize="13sp" />
-                    </LinearLayout>
+                            android:layout_marginStart="-20dp"
+                            android:layout_marginTop="-55dp"
+                            android:layout_marginEnd="-200dp"
+                            android:layout_marginBottom="-500dp"
+                            android:adjustViewBounds="true"
+                            android:background="@drawable/frame"
+                            android:scaleType="centerCrop" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="35min"
-                            android:textColor="#8B5CF6"
-                            android:textSize="13sp" />
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp"
+                                android:layout_weight="2"
+                                android:background="#ffffff"
+                                android:gravity="center">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text=" remaining"
-                            android:textColor="#b0b0b2"
-                            android:textSize="13sp" />
-                    </LinearLayout>
+                                <ImageView
+                                    android:layout_width="105dp"
+                                    android:layout_height="52dp"
+                                    android:adjustViewBounds="true"
+                                    android:maxWidth="105dp"
+                                    android:maxHeight="52dp"
+                                    android:scaleType="fitCenter"
+                                    android:src="@drawable/aws_logo" />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp"
+                                android:layout_weight="1"
+                                android:background="#fcfcfc"
+                                android:gravity="bottom"
+                                android:orientation="horizontal"
+                                android:padding="6dp">
+
+                                <LinearLayout
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:orientation="vertical">
+
+                                    <TextView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:ellipsize="end"
+                                        android:maxLines="1"
+                                        android:text="AWS Certification"
+                                        android:textColor="#000000"
+                                        android:textSize="14sp"
+                                        android:textStyle="bold" />
+
+                                    <TextView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginTop="2dp"
+                                        android:ellipsize="end"
+                                        android:maxLines="1"
+                                        android:text="1h. 15min"
+                                        android:textColor="#888888"
+                                        android:textSize="12sp" />
+                                </LinearLayout>
+
+                                <ImageView
+                                    android:layout_width="24dp"
+                                    android:layout_height="24dp"
+                                    android:layout_marginTop="4dp"
+                                    android:src="@drawable/bookmark" />
+                            </LinearLayout>
+                        </LinearLayout>
+                    </FrameLayout>
                 </LinearLayout>
-            </LinearLayout>
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="-9dp"
-                android:adjustViewBounds="true"
-                android:gravity="center"
-                android:scaleType="centerCrop"
-                android:src="@drawable/progress_bar" />
+            </HorizontalScrollView>
         </LinearLayout>
-    </FrameLayout>
-
+    </ScrollView>
+    <include
+        android:id="@+id/cardContainer"
+        layout="@layout/card_test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"/>
     <include layout="@layout/bottom_nav" />
 
 </LinearLayout>
