--- a/app/src/main/res/layout/complete.xml
+++ b/app/src/main/res/layout/complete.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,22 +7,21 @@
     android:clipChildren="false"
     android:clipToPadding="false">
 
-    <!-- Top bar -->
     <LinearLayout
         android:id="@+id/topBarLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:background="#f2f3f7"
         android:elevation="8dp"
         android:gravity="center_vertical"
+        android:orientation="horizontal"
         android:paddingStart="30dp"
-        android:paddingEnd="30dp"
         android:paddingTop="30dp"
+        android:paddingEnd="30dp"
         android:paddingBottom="5dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/backIcon"
@@ -35,10 +33,10 @@
             android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
+            android:layout_weight="1"
+            android:gravity="center"
             android:text="AWS Certification"
             android:textColor="#000"
             android:textSize="18sp"
@@ -49,20 +47,17 @@
             android:layout_height="24dp" />
     </LinearLayout>
 
-    <!-- Основной контент -->
     <FrameLayout
         android:id="@+id/contentLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingStart="30dp"
-        android:paddingEnd="30dp"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        app:layout_constraintTop_toBottomOf="@id/topBarLayout"
+        android:paddingStart="50dp"
+        android:paddingTop="100dp"
+        android:paddingEnd="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/topBarLayout">
 
-        <!-- Заголовок и картинка -->
         <ImageView
             android:id="@+id/imageHeader"
             android:layout_width="match_parent"
@@ -71,103 +66,118 @@
             android:scaleType="fitStart"
             android:src="@drawable/fireworks" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Exam results"
-            android:textSize="16sp"
-            android:textColor="#000"
-            android:gravity="center"
-            android:layout_marginTop="16dp"/>
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="80%"
-            android:textSize="36sp"
-            android:textColor="#841FFD"
-            android:layout_marginTop="8dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="80dp"
+                android:gravity="center_horizontal"
+                android:text="Exam results"
+                android:textColor="#000"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="80%"
+                android:textColor="#841FFD"
+                android:textSize="36sp" />
+        </LinearLayout>
     </FrameLayout>
 
-    <!-- Блок поздравления -->
     <LinearLayout
         android:id="@+id/congratsLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="-70dp"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingStart="30dp"
         android:paddingEnd="30dp"
-        app:layout_constraintTop_toBottomOf="@id/contentLayout"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/contentLayout">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             android:text="Congratulations"
-            android:textSize="16sp"
             android:textColor="#22AC26"
-            android:layout_marginTop="24dp"/>
+            android:textSize="16sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:text="You have answered"
-            android:textSize="16sp"
             android:textColor="#999999"
-            android:layout_marginTop="4dp"/>
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="4dp">
+            android:layout_marginTop="4dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="8/10 "
-                android:textSize="16sp"
-                android:textColor="#841FFD" />
+                android:textColor="#841FFD"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="questions correctly"
-                android:textSize="16sp"
-                android:textColor="#999999" />
+                android:textColor="#999999"
+                android:textSize="16sp" />
         </LinearLayout>
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:adjustViewBounds="true"
-            android:src="@drawable/test_analitics"/>
     </LinearLayout>
 
-    <!-- Нижний блок кнопок -->
     <LinearLayout
         android:id="@+id/buttonsContainer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="70dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         android:orientation="vertical"
         android:paddingStart="50dp"
         android:paddingEnd="50dp"
-        android:layout_marginBottom="70dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:adjustViewBounds="true"
+            android:paddingHorizontal="80dp"
+            android:src="@drawable/test_analitics" />
 
         <FrameLayout
             android:id="@+id/reviewTestContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp">
+            android:layout_marginBottom="13dp"
+            android:clipChildren="false"
+            android:clipToPadding="false">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="-15dp"
+                android:layout_marginEnd="-15dp"
+                android:layout_marginBottom="-60dp"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/review_exam" />
@@ -176,23 +186,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:paddingTop="14dp"
+                android:paddingBottom="14dp"
                 android:text="Review Exam"
                 android:textColor="#FFF"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:paddingTop="14dp"
-                android:paddingBottom="14dp" />
+                android:textStyle="bold" />
         </FrameLayout>
 
         <FrameLayout
             android:id="@+id/wrapUpTestContainer"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:clipChildren="false">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="-30dp"
+                android:layout_marginEnd="-30dp"
+                android:layout_marginBottom="-60dp"
                 android:adjustViewBounds="true"
+                android:clipChildren="false"
                 android:scaleType="centerCrop"
                 android:src="@drawable/wrap_ep_exam" />
 
@@ -200,14 +215,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:paddingTop="14dp"
+                android:paddingBottom="14dp"
                 android:text="Wrap up Exam"
                 android:textColor="#841FFD"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:paddingTop="14dp"
-                android:paddingBottom="14dp" />
+                android:textStyle="bold" />
         </FrameLayout>
-
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
