--- a/app/src/main/res/layout/item_test_card.xml
+++ b/app/src/main/res/layout/item_test_card.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="wrap_content"
-android:layout_height="match_parent"
-android:layout_marginEnd="17dp"
+android:layout_height="wrap_content"
+    android:paddingBottom="15dp"
 android:elevation="2dp">
 
 <ImageView
@@ -10,7 +10,7 @@ android:elevation="2dp">
     android:layout_marginStart="-30dp"
     android:layout_marginTop="-55dp"
     android:layout_marginEnd="-200dp"
-    android:layout_marginBottom="-500dp"
+    android:layout_marginBottom="-600dp"
     android:adjustViewBounds="true"
     android:background="@drawable/frame"
     android:scaleType="centerCrop" />
@@ -20,21 +20,20 @@ android:elevation="2dp">
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <!-- Логотип или иконка теста -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
-            android:gravity="center"
-            android:background="#ffffff">
+            android:background="#ffffff"
+            android:gravity="center">
 
             <ImageView
                 android:id="@+id/testIcon"
                 android:layout_width="match_parent"
-                android:layout_height="90dp"
+                android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:maxWidth="140dp"
-                android:maxHeight="80dp"
+                android:maxWidth="170dp"
+                android:maxHeight="100dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/java_logo" />
         </LinearLayout>
