--- a/app/src/main/res/layout/item_test.xml
+++ b/app/src/main/res/layout/item_test.xml
@@ -1,7 +1,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="16dp"
     android:clipChildren="false"
     android:elevation="2dp">
@@ -37,6 +37,7 @@
             android:padding="20dp">
 
             <ImageView
+                android:id="@+id/testIcon"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
                 android:layout_gravity="center"
