--- a/app/src/main/res/layout/item_test_card.xml
+++ b/app/src/main/res/layout/item_test_card.xml
@@ -1,51 +1,53 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-    android:paddingBottom="15dp"
-android:elevation="2dp">
-
-<ImageView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="-30dp"
-    android:layout_marginTop="-55dp"
-    android:layout_marginEnd="-200dp"
-    android:layout_marginBottom="-600dp"
-    android:adjustViewBounds="true"
-    android:background="@drawable/frame"
-    android:scaleType="centerCrop" />
+    android:paddingBottom="15dp"
+    android:layout_marginEnd="17dp"
+    android:elevation="2dp">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-56dp"
+        android:layout_marginStart="-26dp"
+        android:layout_marginBottom="-500dp"
+        android:layout_marginEnd="-200dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/frame" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
             android:background="#ffffff"
-            android:gravity="center">
+            android:layout_marginHorizontal="17dp"
+            android:layout_marginVertical="17dp">
 
             <ImageView
                 android:id="@+id/testIcon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:maxWidth="170dp"
+                android:maxWidth="130dp"
                 android:maxHeight="100dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/java_logo" />
-        </LinearLayout>
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="#fcfcfc"
-            android:gravity="bottom"
+            android:background="#FCFCFC"
             android:orientation="horizontal"
-            android:padding="6dp">
+            android:padding="3dp"
+            android:gravity="center_vertical">
 
             <LinearLayout
                 android:layout_width="0dp"
