--- a/app/src/main/res/layout/learning.xml
+++ b/app/src/main/res/layout/learning.xml
@@ -137,7 +137,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:paddingHorizontal="30dp"
-        android:clipToPadding="false"
+        android:paddingTop="10dp"
         android:clipChildren="false"
         tools:listitem="@layout/item_test"/>
 
