--- a/app/src/main/res/layout/item_test.xml
+++ b/app/src/main/res/layout/item_test.xml
@@ -101,7 +101,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/duration"
+                        android:id="@+id/remainingTime"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="35min"
